fix: align footer style with docs.aliwork.com & fix links from yuque to docs.aliwork.com

--- a/src/components/Contributors/index.scss
+++ b/src/components/Contributors/index.scss
@@ -1,6 +1,7 @@
 .contributors {
   margin-top: 2rem;
   min-height: 50px;
+  padding: 0 100px;
   &.large {
     min-height: 80px;
     .avatar{
